[FIX] registration mobile

--- a/resources/frontend/src/app/features/auth/components/register/register.component.scss
+++ b/resources/frontend/src/app/features/auth/components/register/register.component.scss
@@ -72,6 +72,7 @@
             }
             nz-form-control {
                 max-width: 100%;
+                width: 100%;
                 margin-left: 0;
                 text-align: start;
 
